--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="UTF-8">
+	<title>My Cool Website</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<header>
+		<h1>Welcome to My Cool Website</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<main>
+		<section>
+			<h2>About Me</h2>
+			<p>I'm a web developer based in Anytown, USA. I love building cool websites like this one!</p>
+		</section>
+		<section>
+			<h2>Contact Me</h2>
+			<form>
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name">
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email">
+				<label for="message">Message:</label>
+				<textarea id="message" name="message"></textarea>
+				<input type="submit" value="Send">
+			</form>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; My Cool Website 2023</p>
+	</footer>
 </body>
 </html>
