--- a/index.html
+++ b/index.html
@@ -2,40 +2,48 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>My Cool Website</title>
+	<title>My Simple Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Welcome to My Cool Website</h1>
+		<h1>Welcome to My Simple Website</h1>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Blog</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
 		<section>
-			<h2>About Me</h2>
-			<p>I'm a web developer based in Anytown, USA. I love building cool websites like this one!</p>
+			<h2>About My Simple Website</h2>
+			<p>Welcome to my simple website! This is a place for me to share my thoughts and ideas with the world. I hope you find something interesting here!</p>
 		</section>
 		<section>
-			<h2>Contact Me</h2>
-			<form>
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name">
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email">
-				<label for="message">Message:</label>
-				<textarea id="message" name="message"></textarea>
-				<input type="submit" value="Send">
-			</form>
+			<h2>Our Services</h2>
+			<ul>
+				<li>Web Design</li>
+				<li>Web Development</li>
+				<li>SEO</li>
+				<li>Social Media Management</li>
+				<li>Email Marketing</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Latest Blog Posts</h2>
+			<ul>
+				<li><a href="#">Why Responsive Design is Important</a></li>
+				<li><a href="#">10 Tips for Writing Great Web Copy</a></li>
+				<li><a href="#">How to Boost Your Social Media Presence</a></li>
+			</ul>
 		</section>
 	</main>
 	<footer>
-		<p>&copy; My Cool Website 2023</p>
+		<p>&copy; My Simple Website 2023</p>
 	</footer>
 </body>
 </html>
