--- a/index.html
+++ b/index.html
@@ -2,48 +2,26 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>My Simple Website</title>
+	<title>shuern.github.io</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Welcome to My Simple Website</h1>
+		<h1>Welcome to shuern.github.io</h1>
 	</header>
 	<nav>
 		<ul>
 			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
 		<section>
-			<h2>About My Simple Website</h2>
-			<p>Welcome to my simple website! This is a place for me to share my thoughts and ideas with the world. I hope you find something interesting here!</p>
+			<h2>About shuern.github.io</h2>
+			<p>Welcome to shuern.github.io! This is a place for me to share my thoughts and ideas with the world. I hope you find something interesting here!</p>
 		</section>
-		<section>
-			<h2>Our Services</h2>
-			<ul>
-				<li>Web Design</li>
-				<li>Web Development</li>
-				<li>SEO</li>
-				<li>Social Media Management</li>
-				<li>Email Marketing</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Latest Blog Posts</h2>
-			<ul>
-				<li><a href="#">Why Responsive Design is Important</a></li>
-				<li><a href="#">10 Tips for Writing Great Web Copy</a></li>
-				<li><a href="#">How to Boost Your Social Media Presence</a></li>
-			</ul>
-		</section>
-	</main>
+			</main>
 	<footer>
-		<p>&copy; My Simple Website 2023</p>
+		<p>&copy; shuern.github.io 2023</p>
 	</footer>
 </body>
 </html>
