--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<main>
 		<section>
 			<h2>About shuern.github.io</h2>
-			<p>Welcome to shuern.github.io! This is a place for me to share my thoughts and ideas with the world. I hope you find something interesting here!</p>
+			<p>Welcome to shuern.github.io! This is a place to share my thoughts and ideas with the world. I hope you find something interesting here!</p>
 		</section>
 			</main>
 	<footer>
-		<p>&copy; shuern.github.io 2023</p>
+		<p>&copy; 2023 shuern.github.io. All rights reserved.</p>
 	</footer>
 </body>
 </html>
